--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Rbholika/3d_Portfolio.git",
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
